--- a/static_site/index.html
+++ b/static_site/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>胖胖星球HAPPY - Team Profile</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=3">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -31,16 +31,16 @@
 
         <main class="container">
             <section class="schedule-section">
-                <h2 class="section-title">Recent Schedule</h2>
+                <h2 class="section-title">近期賽程</h2>
                 <div class="schedule-container">
                     <table class="schedule-table" id="schedule-table">
                         <thead>
                             <tr>
-                                <th>Date</th>
-                                <th>Opponent</th>
-                                <th>Result</th>
-                                <th>Score</th>
-                                <th>Details</th>
+                                <th>日期</th>
+                                <th>對手</th>
+                                <th>結果</th>
+                                <th>比分</th>
+                                <th>詳情</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -51,7 +51,7 @@
             </section>
 
             <section class="roster-section">
-                <h2 class="section-title">Team Roster</h2>
+                <h2 class="section-title">球隊陣容</h2>
                 <div class="roster-grid" id="roster-grid">
                     <!-- Players injected by JS -->
                 </div>
@@ -67,18 +67,18 @@
     <div id="game-modal" class="modal">
         <div class="modal-content">
             <span class="close-modal">&times;</span>
-            <h2 id="modal-title">Game Details</h2>
+            <h2 id="modal-title">比賽詳情</h2>
 
             <div class="modal-section">
-                <h3>Quarter Scores</h3>
+                <h3>每節比分</h3>
                 <table id="quarter-table" class="detail-table">
                     <thead>
                         <tr>
-                            <th>Team</th>
-                            <th>Q1</th>
-                            <th>Q2</th>
-                            <th>Q3</th>
-                            <th>Q4</th>
+                            <th>球隊</th>
+                            <th>第一節</th>
+                            <th>第二節</th>
+                            <th>第三節</th>
+                            <th>第四節</th>
                         </tr>
                     </thead>
                     <tbody></tbody>
@@ -86,19 +86,36 @@
             </div>
 
             <div class="modal-section">
-                <h3>Box Score</h3>
+                <h3>球員數據</h3>
                 <div class="table-responsive">
                     <table id="box-score-table" class="detail-table">
                         <thead>
                             <tr>
-                                <th>Player</th>
-                                <th>PTS</th>
-                                <th>REB</th>
-                                <th>AST</th>
-                                <th>STL</th>
-                                <th>BLK</th>
-                                <th>PF</th>
-                                <th>TO</th>
+                                <th rowspan="2">球員</th>
+                                <th rowspan="2">得分</th>
+                                <th colspan="3">2分球</th>
+                                <th colspan="3">3分球</th>
+                                <th colspan="3">罰球</th>
+                                <th colspan="3">籃板</th>
+                                <th rowspan="2">助攻</th>
+                                <th rowspan="2">抄截</th>
+                                <th rowspan="2">阻攻</th>
+                                <th rowspan="2">犯規</th>
+                                <th rowspan="2">失誤</th>
+                            </tr>
+                            <tr>
+                                <th>進球</th>
+                                <th>出手</th>
+                                <th>命中率</th>
+                                <th>進球</th>
+                                <th>出手</th>
+                                <th>命中率</th>
+                                <th>進球</th>
+                                <th>出手</th>
+                                <th>命中率</th>
+                                <th>進攻</th>
+                                <th>防守</th>
+                                <th>總數</th>
                             </tr>
                         </thead>
                         <tbody></tbody>
@@ -112,23 +129,63 @@
     <div id="player-modal" class="modal">
         <div class="modal-content">
             <span class="close-modal" onclick="closePlayerModal()">&times;</span>
-            <h2 id="player-modal-title">Player Stats</h2>
+
+            <!-- Player Profile Section -->
+            <div class="player-profile-section">
+                <div class="player-profile-photo">
+                    <img id="player-modal-photo" src="" alt="Player Photo">
+                </div>
+                <div class="player-profile-info">
+                    <h2 id="player-modal-name"></h2>
+                    <div class="player-averages">
+                        <div class="avg-stat">
+                            <span class="avg-value" id="avg-pts">0</span>
+                            <span class="avg-label">場均得分</span>
+                        </div>
+                        <div class="avg-stat">
+                            <span class="avg-value" id="avg-reb">0</span>
+                            <span class="avg-label">場均籃板</span>
+                        </div>
+                        <div class="avg-stat">
+                            <span class="avg-value" id="avg-ast">0</span>
+                            <span class="avg-label">場均助攻</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="modal-section">
-                <h3>Game Log</h3>
+                <h3>比賽紀錄</h3>
                 <div class="table-responsive">
                     <table id="player-stats-table" class="detail-table">
                         <thead>
                             <tr>
-                                <th>Date</th>
-                                <th>Opponent</th>
-                                <th>PTS</th>
-                                <th>REB</th>
-                                <th>AST</th>
-                                <th>STL</th>
-                                <th>BLK</th>
-                                <th>PF</th>
-                                <th>TO</th>
+                                <th rowspan="2">日期</th>
+                                <th rowspan="2">對手</th>
+                                <th rowspan="2">得分</th>
+                                <th colspan="3">2分球</th>
+                                <th colspan="3">3分球</th>
+                                <th colspan="3">罰球</th>
+                                <th colspan="3">籃板</th>
+                                <th rowspan="2">助攻</th>
+                                <th rowspan="2">抄截</th>
+                                <th rowspan="2">阻攻</th>
+                                <th rowspan="2">犯規</th>
+                                <th rowspan="2">失誤</th>
+                            </tr>
+                            <tr>
+                                <th>進球</th>
+                                <th>出手</th>
+                                <th>命中率</th>
+                                <th>進球</th>
+                                <th>出手</th>
+                                <th>命中率</th>
+                                <th>進球</th>
+                                <th>出手</th>
+                                <th>命中率</th>
+                                <th>進攻</th>
+                                <th>防守</th>
+                                <th>總數</th>
                             </tr>
                         </thead>
                         <tbody></tbody>
