move site to root folder

--- a/team.html
+++ b/team.html
@@ -19,6 +19,7 @@
             <div class="hero-bg" id="hero-bg"></div>
             <div class="hero-overlay"></div>
             <div class="hero-content">
+                <a href="index.html" class="back-link">← 返回聯盟概覽</a>
                 <div class="team-logo-container">
                     <img id="team-logo" src="" alt="Team Logo" class="team-logo">
                 </div>
