Integrate with google sheet

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>胖胖星球HAPPY - 聯盟概覽</title>
-    <link rel="stylesheet" href="style.css?v=20251218">
+    <link rel="stylesheet" href="css/style.css?v=20251219">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -33,7 +33,7 @@
                 </div>
             </div>
 
-            <div class="league-grid" id="league-grid">
+            <div id="league-grid">
                 <!-- Teams injected by JS -->
             </div>
         </section>
@@ -43,7 +43,7 @@
         <p>&copy; 2025 胖胖星球HAPPY. All rights reserved.</p>
     </footer>
 
-    <script src="league.js?v=20251219"></script>
+    <script src="js/league.js?v=20251219"></script>
 </body>
 
 </html>
