--- a/team.html
+++ b/team.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>胖胖星球HAPPY - Team Profile</title>
-    <link rel="stylesheet" href="style.css?v=20251218">
+    <link rel="stylesheet" href="css/style.css?v=20251219">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -196,7 +196,7 @@
         </div>
     </div>
 
-    <script src="script.js?v=20251219"></script>
+    <script src="js/script.js?v=20251219"></script>
 </body>
 
 </html>
