Add logo and header background, fix loading logo display.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>胖胖星球HAPPY - 聯盟概覽</title>
+    <title>胖胖星球 BEMAX Basketball League</title>
     <link rel="stylesheet" href="css/style.css?v=20251219">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,11 +14,15 @@
 </head>
 
 <body>
-    <header class="hero-section">
+    <header class="hero-section index-hero">
+        <div class="hero-bg" id="hero-bg"></div>
         <div class="hero-overlay"></div>
         <div class="container hero-content">
-            <h1 class="team-title">聯盟概覽</h1>
-            <p class="team-subtitle">選擇賽季查看隊伍戰績</p>
+            <div class="league-logo-container">
+                <img src="images/logo.png" alt="League Logo" class="league-logo">
+            </div>
+            <h1 class="team-title">胖胖星球 BEMAX</h1>
+            <p class="team-subtitle">Basketball League</p>
         </div>
     </header>
 
@@ -40,7 +44,7 @@
     </main>
 
     <footer class="container">
-        <p>&copy; 2025 胖胖星球HAPPY. All rights reserved.</p>
+        <p>&copy; 2025 胖胖星球 BEMAX Basketball League. All rights reserved.</p>
     </footer>
 
     <script src="js/league.js?v=20251219"></script>
