--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <img src="images/logo.png" alt="League Logo" class="league-logo">
             </div>
             <h1 class="team-title">胖胖星球 BEMAX</h1>
-            <p class="team-subtitle">Basketball League</p>
+            <h1 class="team-subtitle">Basketball League</h1>
         </div>
     </header>
 
