--- a/team.html
+++ b/team.html
@@ -21,7 +21,7 @@
             <div class="hero-content">
                 <a href="index.html" class="back-link">← 返回聯盟概覽</a>
                 <div class="team-logo-container">
-                    <img id="team-logo" src="" alt="Team Logo" class="team-logo">
+                    <img id="team-logo" src="" alt="Team Logo" class="team-logo" style="display: none;">
                 </div>
                 <h1 id="team-name" class="team-name">Loading...</h1>
                 <div class="team-stats" id="team-stats">
