--- a/index.html
+++ b/index.html
@@ -230,6 +230,9 @@
 
     <footer class="container">
         <p>&copy; 2025 胖胖星球 BEMAX Basketball League. All rights reserved.</p>
+        <p class="footer-terms-wrapper">
+            <a href="terms.html" class="footer-terms-link">隱私政策與使用條款</a>
+        </p>
     </footer>
 
     <script src="js/league.js?v=20251219"></script>
