add videos feature

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
             </div>
         </div>
 
+
+        <section id="featured-games-section" class="container featured-games-section">
+            <!-- Featured games injected by JS -->
+        </section>
+
         <section id="top-players-section" class="container top-players-section">
             <!-- Top players injected by JS -->
         </section>
@@ -78,6 +83,7 @@
                                 <th>結果</th>
                                 <th>比分</th>
                                 <th>詳情</th>
+                                <th>影片</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -235,7 +241,7 @@
         </p>
     </footer>
 
-    <script src="js/league.js?v=20251219"></script>
+    <script src="js/league.js?v=20251220"></script>
 </body>
 
 </html>
