add sponsor area

--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
                 <h1 class="team-subtitle">Basketball League</h1>
             </div>
         </header>
+
+        <section id="sponsors-section" class="container sponsors-section" style="display: none;">
+            <div class="fancy-group-header">
+                <span class="header-accent"></span>
+                <h2>贊助商</h2>
+            </div>
+            <div id="sponsors-grid" class="sponsors-grid">
+                <!-- Sponsors injected by JS -->
+            </div>
+        </section>
+
         <div class="container" style="margin-top: 2rem;">
             <div class="league-controls" style="margin-bottom: 0;">
                 <div class="season-selector-wrapper">
