add register feature

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                     <button class="rules-btn" onclick="openDocModal('比賽規則')">
                         <span class="btn-icon">📋</span> 比賽規則
                     </button>
+                    <button class="rules-btn" onclick="openDocModal('報名資訊')">
+                        <span class="btn-icon">📝</span> 報名資訊
+                    </button>
                 </div>
             </div>
         </div>
