add global loading

--- a/index.html
+++ b/index.html
@@ -303,7 +303,13 @@
         </p>
     </footer>
 
-    <script src="js/league.js?v=20251223_5"></script>
+    <!-- Loading Overlay -->
+    <div id="loading-overlay" class="loading-overlay">
+        <div class="loading-spinner"></div>
+        <div id="loading-text" class="loading-text">Loading...</div>
+    </div>
+
+    <script src="js/league.js?v=20251223_6"></script>
 </body>
 
 </html>
