--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>胖胖星球 BEMAX Basketball League</title>
-    <link rel="stylesheet" href="css/style.css?v=20251219">
+    <link rel="stylesheet" href="css/style.css?v=20251223">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -38,6 +38,9 @@
         </section>
 
         <div class="container" style="margin-top: 2rem;">
+            <div id="latest-news-section" class="latest-news-section" style="display: none;">
+                <!-- News injected by JS -->
+            </div>
             <div class="league-controls" style="margin-bottom: 0;">
                 <div class="season-selector-wrapper">
                     <label for="season-select">選擇賽季：</label>
@@ -309,7 +312,7 @@
         <div id="loading-text" class="loading-text">Loading...</div>
     </div>
 
-    <script src="js/league.js?v=20251223_6"></script>
+    <script src="js/league.js?v=20251223_7"></script>
 </body>
 
 </html>
