add links for pictures

--- a/index.html
+++ b/index.html
@@ -109,8 +109,9 @@
                                 <th>對手</th>
                                 <th>結果</th>
                                 <th>比分</th>
-                                <th>詳情</th>
+                                <th>個人數據</th>
                                 <th>影片</th>
+                                <th>照片</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -287,8 +288,9 @@
                             <th>主隊</th>
                             <th>比分</th>
                             <th>客隊</th>
-                            <th>詳情</th>
+                            <th>個人數據</th>
                             <th>影片</th>
+                            <th>照片</th>
                         </tr>
                     </thead>
                     <tbody>
